# wa-leg-graphrag

./: .gitignore  AGENTS.md  README.md  design.md  helix.toml  pyproject.toml  turn.md  turn2.md  writeup.md
eval/: results.json  results.md
scripts/: hero_viz.py  seed_helix.py
src/leg_graphrag/: __init__.py  agent.py  cli.py  embed.py  ingest.py  waleg.py
src/leg_graphrag/eval/: questions.yaml  run.py
src/leg_graphrag/stores/: flat.py  graph.py
transcripts/: README.md  case-study-champions.md  case-study-connectors.md  case-study-themes.md  failure-misattribution.md
