[project]
name = "leg-graphrag"
version = "0.1.0"
description = "Graph+vector vs flat-vector RAG over the WA Legislature (HelixDB + PydanticAI)"
readme = "README.md"
authors = [
    { name = "Ryan Sloan", email = "ryan@ryanjsloan.com" }
]
requires-python = ">=3.13"
dependencies = [
    "helix-db>=0.1.0",
    "numpy>=2.5.1",
    "pydantic-ai>=2.8.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.6.0",
    "wa-leg-api>=0.4.0",
]

[project.scripts]
leg = "leg_graphrag.cli:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
